test/mock/plugins/invalid/invalid-methods-type.js
module.exports = {
  service: 'lambda',
  methods: [ {
    foo: {
      request: async () => {}
    }
  } ]
}
